--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/theband
 spring.datasource.username=postgres
 spring.datasource.password=mysecret
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+server.port=${PORT:5705}
